Added textarea and rendering keyboard

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,14 @@
     <title>Virtual Keyboard</title>
   </head>
   <body>
-    <h1>Virtual Keyboard</h1>
+    <div id="app">
+      <h1>Virtual ⌨ Keyboard</h1>
+
+      <textarea id="mainTextArea" rows="10" inputmode="none" spellcheck="true" value=""></textarea>
+
+      <div id="keyBoardContainer">
+        <div class="keysRow">Is your JavaScript enabled? 🤔</div>
+      </div>
+    </div>
   </body>
 </html>
