🧈 Added on-off switch

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,12 @@
   <body>
     <div id="app">
       <h1>Virtual ⌨ Keyboard</h1>
+      <div id="switch-container">
+        <label class="switch">
+          <input type="checkbox" id="keyboard-on-off-button" />
+          <span class="slider round"></span>
+        </label>
+      </div>
 
       <textarea id="mainTextArea" rows="10" inputmode="none" spellcheck="true" value=""></textarea>
 
